deploy/httproute/kube-prometheus-stack/kube-prometheus-stack-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-stack
  namespace: kube-prometheus-stack
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy
      sectionName: http
  hostnames:
    - "prometheus.localhost"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prometheus-kube-prometheus-stack-prometheus
          port: 9090
          namespace: kube-prometheus-stack
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: kube-prometheus-stack
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy
      sectionName: http
  hostnames:
    - "grafana.localhost"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana
          port: 80
          namespace: kube-prometheus-stack
